--- a/assignment.html
+++ b/assignment.html
@@ -67,7 +67,7 @@
             <a href="#">Bollywood</a>
             <a href="#">Hollywood</a>
             <a href="#">South Indian</a>
-            <a href="#">Follow(Insta)</a>
+            <a href="https://www.instagram.com">Follow(Insta)</a>
         </div>
     </header>
     <hr>
